[package]
name = "rust-ci-test"
version = "3.4.34"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
git2 = { version = "=0.19.0", default-features = false }

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
